Simplify Knife.